Save clubs with user login