@@ -10,8 +10,6 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 @Service
 public class CustomUserDetailService implements UserDetailsService {
     @Autowired
@@ -21,13 +19,12 @@ public class CustomUserDetailService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         UserEntity user = userRepository.findFirstByUsername(username);
         if(user != null) {
-            User authUser = new User(
+            return new User(
                     user.getUsername(),
                     user.getPassword(),
-                    user.getRoles().stream().map((role) -> new SimpleGrantedAuthority(role.getName()))
-                            .collect(Collectors.toList())
+                    user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName()))
+                            .toList()
             );
-            return authUser;
         } else {
             throw new UsernameNotFoundException("Invalid username or password");
         }
